<resources>
    <string name="app_name">My Application1</string>
    <string name="todo8">TODO</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="join_us">Join Us!</string>
    <string name="create_new_account">Create new account</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="getting_your_account_ready">Getting your account ready</string>
    <string name="done">Done!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="jobCategory">CATEGORY</string>
    <string name="jobcat">CATEGORY</string>
    <string name="go_back">GO BACK</string>
    <string name="job_id">Job ID</string>
    <string name="listing">Listing</string>
    <string name="listing2">Listing</string>
    <string name="todo">TODO</string>
    <string name="job_description">Job Description</string>
    <string name="payout">Payout</string>
    <string name="contact_info">Contact Info</string>
    <string name="todo1">TODO</string>
    <string name="category_name7">CATEGORY NAME</string>
    <string name="category_name">CATEGORY NAME</string>
    <string name="todo3">TODO</string>
    <string name="job_listing">JOB LISTING</string>
    <string name="jobid">Job ID</string>
    <string name="todo5">TODO</string>
    <string name="job_details">Job Details...</string>
    <string name="create_job">create job</string>
    <string name="payment">Payment:</string>
    <string name="job_title">Job Title</string>
    <string name="location">Location</string>
    <string name="job_creation">job creation</string>
    <string name="job_creation1">JOB CREATION</string>
    <string name="todo2">todo</string>
    <string name="search">search</string>
    <string name="search1">SEARCH</string>
    <string name="todo4">todo1</string>
    <string name="creating_your_job">Creating your job</string>
</resources>
