<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Job_Listing"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/jobcatViewList"
        android:layout_width="417dp"
        android:layout_height="86dp"
        android:background="@drawable/wave2"
        android:gravity="center_horizontal"
        android:hint="@string/category_name"
        android:padding="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/job_listing"
        android:textAlignment="center"
        android:textColor="#0A5687"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/jobnameView"
        android:layout_width="322dp"
        android:layout_height="66dp"
        android:layout_marginBottom="496dp"
        android:autofillHints=""
        android:background="@color/mustard"
        android:ems="10"
        android:hint="@string/job_title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descriptionView"
        android:layout_width="312dp"
        android:layout_height="145dp"
        android:autofillHints=""
        android:background="@drawable/line"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/job_description"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobnameView"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/payView"
        android:layout_width="122dp"
        android:layout_height="38dp"
        android:layout_marginBottom="160dp"
        android:background="@color/colorPrimary"
        android:hint="@string/payout"
        android:padding="8dp"
        android:textAlignment="viewStart"
        android:textColor="@color/Orange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView"
        app:layout_constraintVertical_bias="0.722" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="203dp"
        android:layout_height="81dp"
        android:background="@drawable/line"
        android:hint="@string/contact_info"
        android:padding="4dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payView"
        app:layout_constraintVertical_bias="0.325" />

    <ImageButton
        android:id="@+id/dialerBtn"
        android:layout_width="71dp"
        android:layout_height="62dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/todo1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payView"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageButton
        android:id="@+id/categoryBackbtn"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toBottomOf="@+id/jobcatViewList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/locationView"
        android:layout_width="240dp"
        android:layout_height="58dp"
        android:layout_marginTop="12dp"
        android:hint="@string/location"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

    <ImageView
        android:id="@+id/locationImg"
        android:layout_width="48dp"
        android:layout_height="35dp"
        android:background="@drawable/round_signin"
        app:layout_constraintBottom_toTopOf="@+id/payView"
        app:layout_constraintEnd_toStartOf="@+id/locationView"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionView"
        app:layout_constraintVertical_bias="0.431"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        android:contentDescription="@string/todo5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="35dp"
        android:text="Amount"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/payView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="8dp"
        android:text="Job Description"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="8dp"
        android:text="Contact Number"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>