<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Search">


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintBottom_toTopOf="@id/searchview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobcatView" />

    <TextView
        android:id="@+id/jobcatView"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:background="@drawable/wave"
        android:gravity="center_horizontal"
        android:hint="@string/search"
        android:padding="14dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/search1"
        android:textAlignment="center"
        android:textColor="#0A5687"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/categoryBackbtn"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/todo4"
        app:layout_constraintBottom_toBottomOf="@+id/jobcatView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ListView
        android:id="@+id/searchview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/createJobBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <Button
        android:id="@+id/createJobBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_signin"
        android:text="Create Job"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchview" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/round_signin"
        android:text="Search"
        app:layout_constraintBottom_toTopOf="@id/searchview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/jobcatView" />

</androidx.constraintlayout.widget.ConstraintLayout>